# cgal-public-dev

./: README.md
Barycentric_coordinates_2/: todo.md
Barycentric_coordinates_2/benchmark/Barycentric_coordinates_2/: CMakeLists.txt  benchmark_hm_4_vertices.cpp  benchmark_hm_50_vertices.cpp  benchmark_hm_n_vertices.cpp  benchmark_mv_34_vertices.cpp  benchmark_polygon_100_vertices.cpp  benchmark_polygon_16_vertices.cpp  benchmark_polygon_4_vertices.cpp  benchmark_triangle_coordinates.cpp
Barycentric_coordinates_2/benchmark/Barycentric_coordinates_2/Segment_coordinates/: benchmark_segment_coordinates.cpp
Barycentric_coordinates_2/benchmark/Barycentric_coordinates_2/Triangle_coordinates/: benchmark_triangle_coordinates.cpp
Barycentric_coordinates_2/benchmark/Barycentric_coordinates_2/Wachspress_coordinates/: benchmark_wp_100_vertices.cpp  benchmark_wp_16_vertices.cpp
Barycentric_coordinates_2/doc/Barycentric_coordinates_2/: Barycentric_coordinates_2.txt  Doxyfile.in  PackageDescription.txt  examples.txt
Barycentric_coordinates_2/examples/Barycentric_coordinates_2/: CMakeLists.txt  Wachspress_coordinates.cpp  affine_coordinates.cpp  deprecated_coordinates.cpp  discrete_harmonic_coordinates.cpp  harmonic_coordinates.cpp  mean_value_coordinates.cpp  segment_coordinates.cpp  terrain_height_modeling.cpp  triangle_coordinates.cpp
Barycentric_coordinates_2/include/CGAL/: Barycentric_coordinates_2.h
Barycentric_coordinates_2/package_info/Barycentric_coordinates_2/: maintainer
Barycentric_coordinates_2/test/Barycentric_coordinates_2/: CMakeLists.txt  test_almost_degenerate_segment.cpp  test_almost_degenerate_triangle.cpp  test_boundary_coordinates_at_vertices.cpp  test_boundary_coordinates_on_edges.cpp  test_dh_almost_degenerate_polygon.cpp  test_dh_const_linear_precision.cpp  test_dh_triangle.cpp  test_dh_weights.cpp  test_hm_const_linear_precision.cpp  test_hm_triangle.cpp  test_hm_unit_square.cpp  test_mv_const_linear_precision.cpp  test_mv_special_points.cpp  test_mv_triangle.cpp  test_mv_weakly_convex_polygon.cpp  test_mv_weights.cpp  test_segment_coordinates.cpp  test_segment_coordinates_with_offset.cpp  test_triangle_coordinates.cpp  test_wp_almost_degenerate_polygon.cpp  test_wp_const_linear_precision.cpp  test_wp_dh_unit_square.cpp  test_wp_triangle.cpp  test_wp_weights.cpp
Documentation/doc/Documentation/: Third_party.txt  dependencies  packages.txt
Documentation/doc/biblio/: cgal_manual.bib
Polygon_mesh_processing/test/Polygon_mesh_processing/: CMakeLists.txt  triangulate_hole_Polyhedron_3_no_delaunay_test.cpp  triangulate_hole_Polyhedron_3_test.cpp
QP_solver/include/CGAL/: QP_models.h
Shape_regularization/: todo  todo.md
Shape_regularization/benchmark/Shape_regularization/: CMakeLists.txt  benchmark_contours.cpp  benchmark_qp_segments.cpp
Shape_regularization/doc/Shape_regularization/: Doxyfile.in  NamedParameters.txt  PackageDescription.txt  Shape_regularization.txt  dependencies  examples.txt
Shape_regularization/examples/Shape_regularization/: CMakeLists.txt  regularize_100_segments_angles.cpp  regularize_100_segments_offsets.cpp  regularize_100_segments_ordinates.cpp  regularize_15_segments.cpp  regularize_closed_contour.cpp  regularize_framework.cpp  regularize_open_contour.cpp  regularize_performance.cpp  regularize_planes.cpp  regularize_real_data_2.cpp  regularize_simple.cpp  regularize_solvers.cpp  regularize_with_cgal.cpp
Shape_regularization/examples/Shape_regularization/data/: bu11.polylines  cgal.polylines
Shape_regularization/examples/Shape_regularization/include/: Saver.h  utils.h
Shape_regularization/test/Shape_regularization/: CMakeLists.txt  template.cpp  test_0_segments.cpp  test_100_segments_angles.cpp  test_100_segments_offsets.cpp  test_1_segment.cpp  test_2_segments.cpp  test_3_segments.cpp  test_4_segments.cpp  test_cgal_solver.cpp  test_closed_contour.cpp  test_closed_contour_1.cpp  test_closed_contour_2.cpp  test_closed_contour_3_edges.cpp  test_closed_contour_4_edges.cpp  test_collinear_groups.cpp  test_directions_longest.cpp  test_directions_multiple_1.cpp  test_directions_user_defined.cpp  test_equal_contours.cpp  test_groups_collinear.cpp  test_groups_orthogonal.cpp  test_groups_parallel.cpp  test_longest_direction.cpp  test_multiple_directions.cpp  test_multiple_directions_1.cpp  test_multiple_directions_2.cpp  test_neighbor_query.cpp  test_open_contour.cpp  test_open_contour_1_edge.cpp  test_open_contour_2_edges.cpp  test_open_contour_3_edges.cpp  test_orthogonal_groups.cpp  test_parallel_groups.cpp  test_plane_regularization.cpp  test_segments.cpp  test_unique_segments.cpp  test_user_defined_directions.cpp
Shape_regularization/test/Shape_regularization/include/: Saver.h  utils.h
Solver_interface/examples/Solver_interface/: CMakeLists.txt  diagonalize_matrix.cpp  mixed_integer_program.cpp  osqp_quadratic_program.cpp  singular_value_decomposition.cpp  sparse_solvers.cpp
Weight_interface/: todo.md
Weight_interface/examples/Weight_interface/: CMakeLists.txt  area_weight.cpp  authalic_weight.cpp  authalic_weight_2.cpp  authalic_weights.cpp  barycentric_area_weight_2.cpp  barycentric_cell_weight_2.cpp  barycentric_region_weight.cpp  barycentric_region_weights.cpp  barycentric_weight_2.cpp  bc_one_query.cpp  coordinates_multiple_queries.cpp  coordinates_one_query.cpp  cotangent_weight.cpp  cotangent_weight_2.cpp  cotangent_weights.cpp  custom_traits.cpp  discrete_harmonic_area_weight.cpp  discrete_harmonic_cot_weight.cpp  discrete_harmonic_weight.cpp  discrete_harmonic_weight_2.cpp  discrete_harmonic_weights.cpp  flattening.cpp  generalized_weights.cpp  inverse_distance_weight.cpp  inverse_distance_weight_2.cpp  mean_value_area_weight.cpp  mean_value_tan_safe_weight.cpp  mean_value_tan_weight.cpp  mean_value_weight.cpp  mean_value_weight_2.cpp  mean_value_weights.cpp  mixed_voronoi_area_weight_2.cpp  mixed_voronoi_cell_weight_2.cpp  mixed_voronoi_region_weight.cpp  mixed_voronoi_region_weights.cpp  mixed_voronoi_weight_2.cpp  projection_traits.cpp  shepard_weight.cpp  shepard_weight_2.cpp  (+29 more)
(+273 files in other folders)
